# Litchi

./: .gitignore  CMakeLists.txt  LICENSE  README.md  xmake.lua
Litchi/: CMakeLists.txt  LitchiCompression.cpp  LitchiCompression.ixx  LitchiContext.cpp  LitchiContext.ixx  LitchiHttpConnect.cpp  LitchiHttpConnect.ixx  LitchiHttpConnect_Define.ixx  LitchiMemory.ixx  LitchiSocketConnect.ixx  LitchiSocketExecutor.cpp  LitchiSocketExecutor.h  LitchiSocketTcp.cpp  LitchiSocketTcp.ixx
Litchi/AsioWrapper/: LitchiAsioWrapper.cpp  LitchiAsioWrapper.h
Test/: CMakeLists.txt  Http11Test.cpp
include/Litchi/: LitchiCompression.h  LitchiContext.h  LitchiHttpConnect.h  LitchiSocketConnect.h
src/: CMakeLists.txt  LitchiCompression.cpp  LitchiContext.cpp  LitchiHttpConnect.cpp  LitchiSocketConnect.cpp
test/: CMakeLists.txt  UnitTest.cpp
